--- a/tutu.html
+++ b/tutu.html
@@ -1,3 +1,4 @@
+<link href="https://fonts.cdnfonts.com/css/good-dog" rel="stylesheet">
 <!DOCTYPE html>
 <html>
     <head>
@@ -18,7 +19,7 @@
                     <h1>Today <span style="font-family: Cedarville Cursive";><br>Don't give up! </span></h1>
                     <button id="newReminder">+</button>
                 </div>
-                <ul class="list">
+                <ul class="list" style="font-family: GoodDog Plain;">
                     <!-- list of reminders that will be innnputed -->
                 </ul>
             </div>
